finish connected platform page

--- a/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-nav-bar/admin-nav-bar.component.html
@@ -36,6 +36,11 @@
                         Ip Infos
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/a/connected-platforms" routerLinkActive="active" ariaCurrentWhenActive="page">
+                        Plateformes connectées
+                    </a>
+                </li>
             </ul>
             <div class="d-flex gap-2">
                 <button id="zone-admin-button" class="btn btn-outline-primary" routerLink="">ÉrablièreIU</button>
