--- a/ErabliereIU/src/app/client-view/notes/modifier-note.component.html
+++ b/ErabliereIU/src/app/client-view/notes/modifier-note.component.html
@@ -19,12 +19,13 @@
           <input-error [errorObj]="errorObj" [controlName]="'title'"></input-error>
         </div>
         <div class="mb-2">
-          <etextarea 
+          <einput 
             arialabel="Text" 
+            type="textarea"
             [formGroup]="noteForm" 
             name="text"
             placeholder="Description"
-            [errorObj]="errorObj"></etextarea>
+            [errorObj]="errorObj"></einput>
         </div>
         <div [class]="'form-group mb-3' + (noteForm.controls['noteDate'].touched ? ' was-validated' : '')">
           <label class="form-label" for="modifier-note-noteDate">Date de la note: </label>
