--- a/ErabliereIU/src/app/admin-view/admin-ipinfos/admin-ipinfos.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-ipinfos/admin-ipinfos.component.html
@@ -23,7 +23,7 @@
                 <h5>Total IPs</h5>
                 <p>Nombre total d'adresses IP ayant effectué des requêtes.</p>
                 <br />
-                <h3>{{ ipInfos.length }}</h3>
+                <h3>{{ totalCount }}</h3>
             </div>
             <div class="col-md-4">
                 <h5>Powered by IPinfo</h5>
