display admin pages when app is in demo mode

--- a/ErabliereIU/src/app/admin-view/admin-ipinfos/admin-ipinfos.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-ipinfos/admin-ipinfos.component.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <app-ipinfo-map [ipInfos]="ipInfos" [authorizeCountries]="authorizeCountries"></app-ipinfo-map>
+        <app-ipinfo-map [authorizeCountries]="authorizeCountries"></app-ipinfo-map>
 
         <app-ipinfo-list [ipInfos]="ipInfos" [authorizeCountryCode]="authorizeCountries"></app-ipinfo-list>
     </div>
