--- a/ErabliereIU/src/app/app.component.html
+++ b/ErabliereIU/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div>
       <div class="d-flex justify-content-center align-items-center min-vh-100">
         <div class="spinner-border text-success">
-          <span class="visually-hidden">Chargement...</span>
+          <span class="visually-hidden" i18n>Chargement...</span>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <p class="text-center">© 2025 - ErabliereAPI - <a href="/termesandcondition">Termes et conditions</a></p>
+          <p class="text-center" i18n>© 2025 - ErabliereAPI - <a href="/termesandcondition">Termes et conditions</a></p>
         </div>
       </div>
     </div>
