--- a/ErabliereIU/src/app/page401/page401.component.html
+++ b/ErabliereIU/src/app/page401/page401.component.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-    <h3>Erreur 401 - Non autorisé</h3>
+    <h3 i18n>Erreur 401 - Non autorisé</h3>
     <hr />
-    <p>Vos permission ne vous permette pas d'accéder à cette page de l'application.</p>
+    <p i18n>Vos permission ne vous permette pas d'accéder à cette page de l'application.</p>
 </div>
