--- a/ErabliereIU/src/app/page404/page404.component.html
+++ b/ErabliereIU/src/app/page404/page404.component.html
@@ -1,5 +1,5 @@
 <div class="m-3">
-    <h3>Erreur 404 - Page non trouvée</h3>
+    <h3 i18n>Erreur 404 - Page non trouvée</h3>
     <hr />
-    <p>Nous sommes désolés, mais nous ne pouvons pas trouver cette page. Vérifiez que vous avez bien saisi la bonne adresse.</p>
+    <p i18n>Nous sommes désolés, mais nous ne pouvons pas trouver cette page. Vérifiez que vous avez bien saisi la bonne adresse.</p>
 </div>
