fix edit alerte capteur decimal, plus fix a typo in MinValue propoerty name

--- a/ErabliereIU/src/app/client-view/alerte/alerte.component.html
+++ b/ErabliereIU/src/app/client-view/alerte/alerte.component.html
@@ -93,7 +93,7 @@
                             }
                         </td>
                         <td>
-                            {{formatNumber(alerte.minVaue, alerte.capteur?.symbole, true)}}
+                            {{formatNumber(alerte.minValue, alerte.capteur?.symbole, true)}}
                         </td>
                         <td>
                             {{formatNumber(alerte.maxValue, alerte.capteur?.symbole, true)}}
