ajustement des modeles UI

--- a/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
+++ b/ErabliereIU/src/app/ai-view/ai-nav-bar/ai-nav-bar.component.html
@@ -12,6 +12,8 @@
             <div class="navbar-nav me-auto mb-2 mb-lg-0">
                 <a class="nav-link" routerLinkActive="active" ariaCurrentWhenActive="page"
                     routerLink="/ai">Conversations</a>
+                <a class="nav-link" routerLinkActive="active" ariaCurrentWhenActive="page"
+                    routerLink="/ai/images">Images</a>
             </div>
             <div class="d-flex gap-2">
                 <button id="zone-admin-button" class="btn btn-primary" routerLink="">ÉrablièreIU</button>
