utilisation composante de pagination (admin customer & erabliere), utilisation composante modal (ajouter capteur)

--- a/ErabliereIU/src/app/admin-view/admin-customers/admin-customers.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-customers/admin-customers.component.html
@@ -14,4 +14,10 @@
           (customerAModifier)="demarrerModifierCustomer($event)"
         ></customer-list>
     </div>
+    <div>
+      <app-pagination
+        [nombreParPage]="pageSize"
+        [nombreElements]="totalItems"
+        (changementDePageEvent)="onPageChange($event)" />
+    </div>
 </div>
