--- a/ErabliereIU/src/app/admin-view/admin-erablieres/admin-erablieres.component.html
+++ b/ErabliereIU/src/app/admin-view/admin-erablieres/admin-erablieres.component.html
@@ -25,4 +25,10 @@
             (erabliereAModifier)="demarrerModifierErabliere($event)"
         ></erabliere-list>
     </div>
+    <div>
+      <app-pagination
+        [nombreParPage]="top"
+        [nombreElements]="totalErabliere"
+        (changementDePageEvent)="onPageChange($event)" />
+    </div>
 </div>
